add getting logged in user API
