# api/user.go
@@ -103,7 +103,7 @@ func (server *Server) loginUser(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).JSON(newErrorResponse(err))
 	}
 
-	user, err := server.store.GetUser(c.Context(), req.Email)
+	user, err := server.store.GetUserByEmail(c.Context(), req.Email)
 	if err != nil {
 		if err == sql.ErrNoRows {
 			return c.Status(fiber.StatusNotFound).JSON(newErrorResponse(err))
@@ -169,6 +169,38 @@ func (server *Server) logoutUser(c *fiber.Ctx) error {
 	}
 
 	c.ClearCookie(sessionTokenKey)
+
+	return c.Status(fiber.StatusOK).JSON(rsp)
+}
+
+// @Summary      Get logged in user
+// @Tags         users
+// @Param        body body loginUserRequest true "User object"
+// @Success      200 {object} loginUserResponse
+// @Failure      401 {object} errorResponse
+// @Failure      404 {object} errorResponse
+// @Failure      500 {object} errorResponse
+// @Router       /users/me [get]
+func (server *Server) getLoggedInUser(c *fiber.Ctx) error {
+	sessionToken := c.Locals(sessionTokenKey).(uuid.UUID)
+
+	session, err := server.store.GetSession(c.Context(), sessionToken)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return c.Status(fiber.StatusUnauthorized).JSON(newErrorResponse(err))
+		}
+		return c.Status(fiber.StatusInternalServerError).JSON(newErrorResponse(err))
+	}
+
+	user, err := server.store.GetUser(c.Context(), session.UserID)
+	if err != nil {
+		if err == sql.ErrNoRows {
+			return c.Status(fiber.StatusNotFound).JSON(newErrorResponse(err))
+		}
+		return c.Status(fiber.StatusInternalServerError).JSON(newErrorResponse(err))
+	}
+
+	rsp := newUserResponse(user)
 
 	return c.Status(fiber.StatusOK).JSON(rsp)
 }
